workshop04/class-demo/dov-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  labels:
    name: dov-deploy
  # namespace: myns
spec:
  replicas: 4
  selector: 
    matchLabels:
      name: dov-pod
  template:
    metadata:
      name: dov-pod
      labels:
        name: dov-pod
      namespace: myns
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  name: dov-pod
              topologyKey: doks.digitalocean.com/node-id  
      containers:
        - name: dov-container
          image: enghuat91/dov-bear:java-v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000 # container port
---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  labels:
    name: dov-svc
spec:
  type: ClusterIP
  selector:
    name: dov-pod
  ports:
    - port: 8080 # service port
      targetPort: 3000 # container port
